# auth-service

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml  requirements.txt
src/: config.py  dependencies.py  exceptions.py  main.py
src/api/: admin.py  auth.py  products.py  user.py
src/fake_db/: cart.py  products.py
src/migrations/: env.py
src/migrations/versions/: 2026_04_02_1758-788cdedb8dd4_add_tables_users_roles.py  2026_04_02_1801-e56514c4fc34_change_users_table.py  2026_04_02_1804-d5d54c957e2c_change_roles_table.py  2026_04_03_1020-0008431860fe_change_users_and_roles.py  2026_04_03_1037-3c478c67aa25_change_users_and_roles.py  2026_04_03_1046-40fb59cd5655_change_roles.py  2026_04_04_1011-41234976cdc6_add_users_roles.py  2026_04_04_1013-e4d967a6d6bd_add_users_roles.py  2026_04_04_1024-156d8ba361b2_change_roles.py  2026_04_04_1056-31f45c58cd06_change_users.py  2026_04_04_1119-592d260eca13_change_users_roles.py  2026_04_04_1300-add_permissions_tables.py  2026_04_04_1400-add_products_permissions.py
src/models/: permissions.py  roles.py  roles_permissions.py  users.py  users_roles.py
src/repositories/: base.py  permissions.py  roles.py  roles_permissions.py  users.py  users_roles.py
src/schemas/: permissions.py  products.py  roles.py  roles_permissions.py  users.py  users_roles.py
src/scripts/: seed_data.py
src/services/: admin.py  auth.py  products.py  users.py
src/utils/: db_manager.py
